test/exercises/c-ray/c-ray.noreal.good
c-ray.chpl:112: error: pixelType must be an integral type
